feat(themes): adds tokens for glass and redhat themes (#8062)

--- a/src/patternfly/base/tokens/tokens-default.scss
+++ b/src/patternfly/base/tokens/tokens-default.scss
@@ -1,11 +1,14 @@
 
 // Do not edit directly
-// Generated on Wed, 10 Sep 2025 19:58:14 GMT
+// Generated on Fri, 23 Jan 2026 20:37:43 GMT
 
 @mixin pf-v6-tokens {
-  --pf-t--global--background--color--500: rgba(21, 21, 21, 0.2000);
+  --pf-t--global--background--color--500: rgba(21, 21, 21, 0.4000);
   --pf-t--global--background--color--600: rgba(199, 199, 199, 0.2500);
+  --pf-t--global--background--color--700: rgba(199, 199, 199, 0.1000);
   --pf-t--global--background--color--action--plain--default: rgba(255, 255, 255, 0.0000);
+  --pf-t--global--background--filter--glass: 0;
+  --pf-t--global--background--opacity--glass: 100;
   --pf-t--global--border--color--high-contrast: rgba(255, 255, 255, 0.0000);
   --pf-t--global--border--radius--0: 0px;
   --pf-t--global--border--radius--100: 4px;
@@ -33,12 +36,12 @@
   --pf-t--global--box-shadow--X--700: 10px;
   --pf-t--global--box-shadow--X--800: 20px;
   --pf-t--global--box-shadow--Y--100: -10px;
-  --pf-t--global--box-shadow--Y--200: -4px;
+  --pf-t--global--box-shadow--Y--200: -2px;
   --pf-t--global--box-shadow--Y--300: -1px;
   --pf-t--global--box-shadow--Y--400: 0px;
   --pf-t--global--box-shadow--Y--50: -20px;
   --pf-t--global--box-shadow--Y--500: 1px;
-  --pf-t--global--box-shadow--Y--600: 4px;
+  --pf-t--global--box-shadow--Y--600: 2px;
   --pf-t--global--box-shadow--Y--700: 10px;
   --pf-t--global--box-shadow--Y--800: 20px;
   --pf-t--global--box-shadow--blur--100: 4px;
@@ -109,6 +112,7 @@
   --pf-t--global--spacer--800: 5rem;
   --pf-t--global--text-decoration--line--100: none;
   --pf-t--global--text-decoration--line--200: underline;
+  --pf-t--global--text-decoration--offset--hover: 5;
   --pf-t--global--text-decoration--style--100: solid;
   --pf-t--global--text-decoration--style--200: dashed;
   --pf-t--global--timing-function--100: cubic-bezier(.4, 0, .7, .2);
@@ -130,12 +134,14 @@
   --pf-t--global--background--color--backdrop--default: var(--pf-t--global--background--color--500);
   --pf-t--global--background--color--highlight--100: var(--pf-t--color--yellow--30);
   --pf-t--global--background--color--highlight--200: var(--pf-t--color--yellow--40);
+  --pf-t--global--background--color--loading--skeleton--default: var(--pf-t--global--background--color--600);
+  --pf-t--global--background--color--loading--skeleton--subtle: var(--pf-t--global--background--color--700);
   --pf-t--global--background--color--tertiary--default: var(--pf-t--global--background--color--600);
   --pf-t--global--border--color--100: var(--pf-t--color--gray--30);
   --pf-t--global--border--color--200: var(--pf-t--color--gray--40);
-  --pf-t--global--border--color--300: var(--pf-t--color--gray--50);
+  --pf-t--global--border--color--300: var(--pf-t--color--gray--45);
   --pf-t--global--border--color--400: var(--pf-t--color--gray--60);
-  --pf-t--global--border--color--50: var(--pf-t--color--gray--20);
+  --pf-t--global--border--color--50: var(--pf-t--color--gray--10);
   --pf-t--global--border--radius--large: var(--pf-t--global--border--radius--400);
   --pf-t--global--border--radius--medium: var(--pf-t--global--border--radius--300);
   --pf-t--global--border--radius--pill: var(--pf-t--global--border--radius--500);
@@ -145,9 +151,9 @@
   --pf-t--global--border--width--action--clicked: var(--pf-t--global--border--width--200);
   --pf-t--global--border--width--action--default: var(--pf-t--global--border--width--100);
   --pf-t--global--border--width--action--hover: var(--pf-t--global--border--width--200);
-  --pf-t--global--border--width--box--clicked: var(--pf-t--global--border--width--200);
+  --pf-t--global--border--width--box--clicked: var(--pf-t--global--border--width--300);
   --pf-t--global--border--width--box--default: var(--pf-t--global--border--width--100);
-  --pf-t--global--border--width--box--hover: var(--pf-t--global--border--width--100);
+  --pf-t--global--border--width--box--hover: var(--pf-t--global--border--width--200);
   --pf-t--global--border--width--box--status--default: var(--pf-t--global--border--width--200);
   --pf-t--global--border--width--box--status--read: var(--pf-t--global--border--width--100);
   --pf-t--global--border--width--control--clicked: var(--pf-t--global--border--width--200);
@@ -221,9 +227,17 @@
   --pf-t--global--color--brand--300: var(--pf-t--color--blue--60);
   --pf-t--global--color--brand--400: var(--pf-t--color--blue--70);
   --pf-t--global--color--brand--500: var(--pf-t--color--blue--80);
+  --pf-t--global--color--brand--accent--100: var(--pf-t--color--red--50);
+  --pf-t--global--color--brand--accent--200: var(--pf-t--color--red--60);
+  --pf-t--global--color--brand--accent--300: var(--pf-t--color--red--70);
+  --pf-t--global--color--brand--accent--400: var(--pf-t--color--black);
+  --pf-t--global--color--brand--subtle--100: var(--pf-t--color--blue--10);
+  --pf-t--global--color--brand--subtle--200: var(--pf-t--color--blue--20);
+  --pf-t--global--color--brand--subtle--300: var(--pf-t--color--blue--40);
+  --pf-t--global--color--brand--subtle--400: var(--pf-t--color--blue--50);
   --pf-t--global--color--disabled--100: var(--pf-t--color--gray--30);
   --pf-t--global--color--disabled--200: var(--pf-t--color--gray--40);
-  --pf-t--global--color--disabled--300: var(--pf-t--color--gray--60);
+  --pf-t--global--color--disabled--300: var(--pf-t--color--gray--50);
   --pf-t--global--color--favorite--100: var(--pf-t--color--yellow--30);
   --pf-t--global--color--favorite--200: var(--pf-t--color--yellow--40);
   --pf-t--global--color--favorite--300: var(--pf-t--color--yellow--70);
@@ -289,7 +303,7 @@
   --pf-t--global--color--status--custom--300: var(--pf-t--color--teal--80);
   --pf-t--global--color--status--danger--100: var(--pf-t--color--red-orange--60);
   --pf-t--global--color--status--danger--200: var(--pf-t--color--red-orange--70);
-  --pf-t--global--color--status--danger--300: var(--pf-t--color--red-orange--80);
+  --pf-t--global--color--status--danger--300: var(--pf-t--color--red-orange--70);
   --pf-t--global--color--status--info--100: var(--pf-t--color--purple--50);
   --pf-t--global--color--status--info--200: var(--pf-t--color--purple--60);
   --pf-t--global--color--status--info--300: var(--pf-t--color--purple--70);
@@ -374,8 +388,8 @@
   --pf-t--global--text-decoration--help-text--style--hover: var(--pf-t--global--text-decoration--style--200);
   --pf-t--global--text-decoration--link--line--default: var(--pf-t--global--text-decoration--line--200);
   --pf-t--global--text-decoration--link--line--hover: var(--pf-t--global--text-decoration--line--200);
-  --pf-t--global--text-decoration--link--style--default: var(--pf-t--global--text-decoration--style--100);
-  --pf-t--global--text-decoration--link--style--hover: var(--pf-t--global--text-decoration--style--100);
+  --pf-t--global--text-decoration--link--style--default: var(--pf-t--global--text-decoration--style--200);
+  --pf-t--global--text-decoration--link--style--hover: var(--pf-t--global--text-decoration--style--200);
   --pf-t--global--z-index--2xl: var(--pf-t--global--z-index--600);
   --pf-t--global--z-index--lg: var(--pf-t--global--z-index--400);
   --pf-t--global--z-index--md: var(--pf-t--global--z-index--300);
@@ -400,8 +414,12 @@
   --pf-t--global--background--color--secondary--clicked: var(--pf-t--global--background--color--300);
   --pf-t--global--background--color--secondary--default: var(--pf-t--global--background--color--200);
   --pf-t--global--background--color--secondary--hover: var(--pf-t--global--background--color--300);
+  --pf-t--global--border--color--brand--subtle--clicked: var(--pf-t--global--color--brand--subtle--300);
+  --pf-t--global--border--color--brand--subtle--default: var(--pf-t--global--color--brand--subtle--200);
+  --pf-t--global--border--color--brand--subtle--hover: var(--pf-t--global--color--brand--subtle--300);
   --pf-t--global--border--color--clicked: var(--pf-t--global--color--brand--200);
-  --pf-t--global--border--color--control--read-only: var(--pf-t--global--border--color--50);
+  --pf-t--global--border--color--control--default: var(--pf-t--global--border--color--300);
+  --pf-t--global--border--color--control--read-only: var(--pf-t--global--border--color--100);
   --pf-t--global--border--color--default: var(--pf-t--global--border--color--100);
   --pf-t--global--border--color--disabled: var(--pf-t--global--color--disabled--200);
   --pf-t--global--border--color--hover: var(--pf-t--global--color--brand--100);
@@ -436,9 +454,17 @@
   --pf-t--global--border--color--status--warning--clicked: var(--pf-t--global--color--status--warning--300);
   --pf-t--global--border--color--status--warning--default: var(--pf-t--global--color--status--warning--200);
   --pf-t--global--border--color--status--warning--hover: var(--pf-t--global--color--status--warning--300);
+  --pf-t--global--border--color--subtle: var(--pf-t--global--border--color--50);
+  --pf-t--global--border--radius--action--default: var(--pf-t--global--border--radius--pill);
+  --pf-t--global--border--radius--action--plain--default: var(--pf-t--global--border--radius--small);
+  --pf-t--global--border--radius--control--default: var(--pf-t--global--border--radius--small);
+  --pf-t--global--border--radius--control--form-element: var(--pf-t--global--border--radius--small);
   --pf-t--global--color--brand--clicked: var(--pf-t--global--color--brand--300);
   --pf-t--global--color--brand--default: var(--pf-t--global--color--brand--200);
   --pf-t--global--color--brand--hover: var(--pf-t--global--color--brand--300);
+  --pf-t--global--color--brand--subtle--clicked: var(--pf-t--global--color--brand--subtle--200);
+  --pf-t--global--color--brand--subtle--default: var(--pf-t--global--color--brand--subtle--100);
+  --pf-t--global--color--brand--subtle--hover: var(--pf-t--global--color--brand--subtle--200);
   --pf-t--global--color--favorite--clicked: var(--pf-t--global--color--favorite--200);
   --pf-t--global--color--favorite--default: var(--pf-t--global--color--favorite--100);
   --pf-t--global--color--favorite--hover: var(--pf-t--global--color--favorite--200);
@@ -569,7 +595,10 @@
   --pf-t--global--text--color--subtle: var(--pf-t--global--text--color--200);
   --pf-t--global--text-decoration--offset--default: var(--pf-t--global--spacer--xs);
   --pf-t--global--text-decoration--width--default: var(--pf-t--global--border--width--regular);
+  --pf-t--global--text-decoration--width--hover: var(--pf-t--global--border--width--strong);
   --pf-t--global--background--color--control--default: var(--pf-t--global--background--color--primary--default);
+  --pf-t--global--background--color--glass--floating: var(--pf-t--global--background--color--floating--default);
+  --pf-t--global--background--color--glass--primary: var(--pf-t--global--background--color--primary--default);
   --pf-t--global--border--color--alt: var(--pf-t--global--background--color--primary--default);
   --pf-t--global--border--color--brand--clicked: var(--pf-t--global--color--brand--clicked);
   --pf-t--global--border--color--brand--default: var(--pf-t--global--color--brand--default);
@@ -587,6 +616,9 @@
   --pf-t--global--border--color--status--success--clicked: var(--pf-t--global--color--status--success--clicked);
   --pf-t--global--border--color--status--success--default: var(--pf-t--global--color--status--success--default);
   --pf-t--global--border--color--status--success--hover: var(--pf-t--global--color--status--success--hover);
+  --pf-t--global--color--brand--accent--clicked: var(--pf-t--global--color--brand--clicked);
+  --pf-t--global--color--brand--accent--default: var(--pf-t--global--color--brand--default);
+  --pf-t--global--color--brand--accent--hover: var(--pf-t--global--color--brand--hover);
   --pf-t--global--color--status--read--on-primary: var(--pf-t--global--background--color--secondary--default);
   --pf-t--global--color--status--unread--attention--clicked: var(--pf-t--global--color--status--danger--clicked);
   --pf-t--global--color--status--unread--attention--default: var(--pf-t--global--color--status--danger--default);
@@ -627,9 +659,15 @@
   --pf-t--global--icon--color--nonstatus--on-yellow--clicked: var(--pf-t--global--icon--color--regular);
   --pf-t--global--icon--color--nonstatus--on-yellow--default: var(--pf-t--global--icon--color--regular);
   --pf-t--global--icon--color--nonstatus--on-yellow--hover: var(--pf-t--global--icon--color--regular);
+  --pf-t--global--icon--color--on-brand--accent--clicked: var(--pf-t--global--icon--color--inverse);
+  --pf-t--global--icon--color--on-brand--accent--default: var(--pf-t--global--icon--color--inverse);
+  --pf-t--global--icon--color--on-brand--accent--hover: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--icon--color--on-brand--clicked: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--icon--color--on-brand--default: var(--pf-t--global--icon--color--inverse);
   --pf-t--global--icon--color--on-brand--hover: var(--pf-t--global--icon--color--inverse);
+  --pf-t--global--icon--color--on-brand--subtle--clicked: var(--pf-t--global--icon--color--regular);
+  --pf-t--global--icon--color--on-brand--subtle--default: var(--pf-t--global--icon--color--regular);
+  --pf-t--global--icon--color--on-brand--subtle--hover: var(--pf-t--global--icon--color--regular);
   --pf-t--global--icon--color--status--custom--clicked: var(--pf-t--global--color--status--custom--clicked);
   --pf-t--global--icon--color--status--custom--default: var(--pf-t--global--color--status--custom--default);
   --pf-t--global--icon--color--status--custom--hover: var(--pf-t--global--color--status--custom--hover);
@@ -702,9 +740,15 @@
   --pf-t--global--text--color--nonstatus--on-yellow--clicked: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--nonstatus--on-yellow--default: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--nonstatus--on-yellow--hover: var(--pf-t--global--text--color--regular);
+  --pf-t--global--text--color--on-brand--accent--clicked: var(--pf-t--global--text--color--inverse);
+  --pf-t--global--text--color--on-brand--accent--default: var(--pf-t--global--text--color--inverse);
+  --pf-t--global--text--color--on-brand--accent--hover: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--on-brand--clicked: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--on-brand--default: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--on-brand--hover: var(--pf-t--global--text--color--inverse);
+  --pf-t--global--text--color--on-brand--subtle--clicked: var(--pf-t--global--text--color--regular);
+  --pf-t--global--text--color--on-brand--subtle--default: var(--pf-t--global--text--color--regular);
+  --pf-t--global--text--color--on-brand--subtle--hover: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--placeholder: var(--pf-t--global--text--color--subtle);
   --pf-t--global--text--color--status--custom--clicked: var(--pf-t--global--color--status--custom--clicked);
   --pf-t--global--text--color--status--custom--default: var(--pf-t--global--color--status--custom--default);
@@ -739,5 +783,13 @@
   --pf-t--global--text--color--status--unread--on-default--clicked: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--status--unread--on-default--default: var(--pf-t--global--text--color--inverse);
   --pf-t--global--text--color--status--unread--on-default--hover: var(--pf-t--global--text--color--inverse);
+  --pf-t--global--text-decoration--color--default: var(--pf-t--global--border--color--default);
+  --pf-t--global--text-decoration--color--hover: var(--pf-t--global--border--color--hover);
+  --pf-t--global--border--color--brand--accent--clicked: var(--pf-t--global--color--brand--accent--clicked);
+  --pf-t--global--border--color--brand--accent--default: var(--pf-t--global--color--brand--accent--default);
+  --pf-t--global--border--color--brand--accent--hover: var(--pf-t--global--color--brand--accent--hover);
   --pf-t--global--color--status--read--on-secondary: var(--pf-t--global--background--color--control--default);
+  --pf-t--global--icon--color--brand--accent--clicked: var(--pf-t--global--color--brand--accent--clicked);
+  --pf-t--global--icon--color--brand--accent--default: var(--pf-t--global--color--brand--accent--default);
+  --pf-t--global--icon--color--brand--accent--hover: var(--pf-t--global--color--brand--accent--hover);
 }
