--- a/src/patternfly/components/Button/button--variations.hbs
+++ b/src/patternfly/components/Button/button--variations.hbs
@@ -51,6 +51,8 @@
 
   {{> button button--IsPlain=true button--aria-label="Remove" button--IsIcon=true button--icon="times"}}
 
+  {{> button button--IsPlain=true button--aria-label="Remove" button--icon="times" button--text="Plain with text"}}
+
   <br><br>
 
   {{#> button button--IsControl=true}}
