--- a/src/patternfly/components/MenuToggle/menu-toggle.hbs
+++ b/src/patternfly/components/MenuToggle/menu-toggle.hbs
@@ -13,6 +13,8 @@
     menu-toggle--IsPlaceholder='pf-m-placeholder'
     menu-toggle--IsSettings='pf-m-settings'
     menu-toggle--IsCircle='pf-m-circle'
+    menu-toggle--IsDock='pf-m-dock'
+    menu-toggle--IsTextExpanded='pf-m-text-expanded'
     menu-toggle--modifier=menu-toggle--modifier
   }}
   {{#unless menu-toggle--IsSplitButton}}
@@ -39,9 +41,9 @@
   {{/unless}}
 
   {{#if menu-toggle--IsPlain}}
-    {{#unless menu-toggle--text}}
+    {{#ifAll (inverse menu-toggle--text) (inverse menu-toggle--IsDock)}}
       aria-label="{{ternary menu-toggle--aria-label menu-toggle--aria-label "Menu toggle"}}"
-    {{/unless}}
+    {{/ifAll}}
   {{/if}}
 
   {{#if menu-toggle--id}}
