--- a/src/patternfly/components/Nav/nav.hbs
+++ b/src/patternfly/components/Nav/nav.hbs
@@ -4,6 +4,7 @@
       nav--IsHorizontalSubnav='pf-m-horizontal pf-m-subnav'
       nav--IsScrollable='pf-m-scrollable'
       nav--IsDocked='pf-m-docked'
+      nav--IsTextExpanded='pf-m-text-expanded'
       nav--modifier=nav--modifier
     }}"
   {{#ifAny aria-label nav--aria-label}}
