--- a/src/patternfly/base/tokens/tokens-default.scss
+++ b/src/patternfly/base/tokens/tokens-default.scss
@@ -1,14 +1,14 @@
 
 // Do not edit directly
-// Generated on Fri, 06 Feb 2026 20:13:04 GMT
+// Generated on Sat, 07 Feb 2026 00:03:04 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--global--background--color--500: rgba(21, 21, 21, 0.4000);
   --pf-t--global--background--color--600: rgba(199, 199, 199, 0.2500);
   --pf-t--global--background--color--700: rgba(199, 199, 199, 0.1000);
   --pf-t--global--background--color--action--plain--default: rgba(255, 255, 255, 0.0000);
-  --pf-t--global--background--filter--glass--blur--floating: 0px;
-  --pf-t--global--background--filter--glass--blur--primary: 0px;
+  --pf-t--global--background--filter--glass--blur--floating: blur(0px);
+  --pf-t--global--background--filter--glass--blur--primary: blur(0px);
   --pf-t--global--background--opacity--glass--floating: 100%;
   --pf-t--global--background--opacity--glass--primary: 100%;
   --pf-t--global--border--color--high-contrast: rgba(255, 255, 255, 0.0000);
