--- a/src/patternfly/base/tokens/tokens-glass-dark.scss
+++ b/src/patternfly/base/tokens/tokens-glass-dark.scss
@@ -1,11 +1,11 @@
 
 // Do not edit directly
-// Generated on Fri, 06 Feb 2026 20:13:04 GMT
+// Generated on Sat, 07 Feb 2026 00:03:04 GMT
 
 // Only tokens that differ from base theme (5 tokens)
 @mixin pf-v6-tokens {
-  --pf-t--global--background--filter--glass--blur--floating: 12.5px;
-  --pf-t--global--background--filter--glass--blur--primary: 12.5px;
+  --pf-t--global--background--filter--glass--blur--floating: blur(12.5px);
+  --pf-t--global--background--filter--glass--blur--primary: blur(12.5px);
   --pf-t--global--background--opacity--glass--floating: 80%;
   --pf-t--global--background--opacity--glass--primary: 80%;
   --pf-t--global--background--color--glass--floating: var(--pf-t--global--background--color--primary--default);
