feat: update to latest tokens w/ glass (#8096)

--- a/src/patternfly/base/tokens/tokens-redhat-glass.scss
+++ b/src/patternfly/base/tokens/tokens-redhat-glass.scss
@@ -1,17 +1,18 @@
 
 // Do not edit directly
-// Generated on Fri, 23 Jan 2026 20:37:44 GMT
+// Generated on Sat, 07 Feb 2026 00:03:04 GMT
 
-// Only tokens that differ from base theme (10 tokens)
+// Only tokens that differ from base theme (11 tokens)
 @mixin pf-v6-tokens {
-  --pf-t--global--background--color--glass--floating: rgba(255, 255, 255, 0.8000);
-  --pf-t--global--background--color--glass--primary: rgba(255, 255, 255, 0.8000);
-  --pf-t--global--background--filter--glass: 12.5;
-  --pf-t--global--background--opacity--glass: 80;
+  --pf-t--global--background--filter--glass--blur--floating: blur(12.5px);
+  --pf-t--global--background--filter--glass--blur--primary: blur(12.5px);
+  --pf-t--global--background--opacity--glass--floating: 80%;
+  --pf-t--global--background--opacity--glass--primary: 80%;
   --pf-t--global--border--color--brand--accent--clicked: var(--pf-t--global--color--brand--accent--400);
   --pf-t--global--border--color--brand--accent--default: var(--pf-t--global--color--brand--accent--400);
   --pf-t--global--border--color--brand--accent--hover: var(--pf-t--global--color--brand--accent--400);
   --pf-t--global--color--brand--accent--clicked: var(--pf-t--global--color--brand--accent--200);
   --pf-t--global--color--brand--accent--default: var(--pf-t--global--color--brand--accent--100);
   --pf-t--global--color--brand--accent--hover: var(--pf-t--global--color--brand--accent--200);
+  --pf-t--global--background--color--glass--floating: var(--pf-t--global--background--color--primary--default);
 }
