feat(tokens): use light-dark as token values

--- a/src/patternfly/base/normalize.scss
+++ b/src/patternfly/base/normalize.scss
@@ -130,10 +130,10 @@
   }
 
   :where(:root) {
-    color-scheme: light;
+    color-scheme: light dark;
   }
 
-  :where(.pf-v6-theme-dark) {
-    color-scheme: dark;
-  }
+  // :where(.pf-v6-theme-dark) {
+  //   color-scheme: dark;
+  // }
 }
