--- a/src/patternfly/base/patternfly-variables.scss
+++ b/src/patternfly/base/patternfly-variables.scss
@@ -1,7 +1,8 @@
 @use '../sass-utilities' as *;
 @use "./tokens/tokens-palette" as palette;
-@use "./tokens/tokens-default" as default;
-@use "./tokens/tokens-dark" as dark;
+// @use "./tokens/tokens-default" as default;
+@use "./tokens/tokens-light-dark" as light-dark;
+// @use "./tokens/tokens-dark" as dark;
 @use "./tokens/tokens-highcontrast" as highcontrast;
 @use "./tokens/tokens-highcontrast-dark" as highcontrast-dark;
 @use "./tokens/tokens-local" as local;
@@ -17,12 +18,13 @@
 :root {
   @include pf-v6-set-inverse(false);
   @include palette.pf-v6-tokens;
-  @include default.pf-v6-tokens;
+  // @include default.pf-v6-tokens;
+  @include light-dark.pf-v6-tokens;
   @include local.pf-v6-tokens;
 }
 
 :root:where(.pf-v6-theme-dark) {
-  @include dark.pf-v6-tokens;
+  // @include dark.pf-v6-tokens;
 }
 
 :root:where(.pf-v6-theme-high-contrast) {
