feat(icon): update swap class name

--- a/src/patternfly/base/patternfly-svg-icons.scss
+++ b/src/patternfly/base/patternfly-svg-icons.scss
@@ -11,7 +11,7 @@
   display: none;
 }
 
-.#{$pf-prefix}icons-rh-ui {
+.#{$pf-prefix}icon-set-rh-ui {
   .#{$pf-prefix}svg .#{$pf-prefix}icon-default {
     display: none;
   }
